[gd_scene load_steps=26 format=3 uid="uid://cxmkuadf3rpcy"]

[ext_resource type="Material" uid="uid://bw7qseeojktwo" path="res://assets/materials/player.tres" id="1_gf80s"]
[ext_resource type="Script" uid="uid://oqgkrky3gyct" path="res://assets/scripts/player/player_controller.gd" id="1_pvdlq"]
[ext_resource type="Script" uid="uid://dxkokv6u80rvp" path="res://assets/scripts/player/components/camera_controller.gd" id="3_qmbew"]
[ext_resource type="Script" uid="uid://dyspnfbyer7li" path="res://scenes/player/camera_effects.gd" id="4_0l0yx"]
[ext_resource type="Script" uid="uid://rpkhwc0od3m4" path="res://assets/scripts/player/components/interaction_raycast.gd" id="4_cv1cy"]
[ext_resource type="Script" uid="uid://d0w7um1tewcsg" path="res://assets/scripts/player/components/mouse_capture.gd" id="4_pvdlq"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="5_rkuj1"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="6_ers80"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="7_nwn0c"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="8_y4pjd"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="9_mxnws"]
[ext_resource type="Script" uid="uid://c5tkyxxw7h7hf" path="res://assets/scripts/player/state_machine.gd" id="10_ers80"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="10_y4pjd"]
[ext_resource type="Script" uid="uid://h1ypjjpjfntx" path="res://assets/scripts/player/states/idle_state.gd" id="11_nwn0c"]
[ext_resource type="Script" uid="uid://cnafhmiyaqwv0" path="res://assets/scripts/player/states/grounded_state.gd" id="12_wpncg"]
[ext_resource type="Script" uid="uid://0b6v00gs3gbp" path="res://assets/scripts/player/states/moving_state.gd" id="13_mxnws"]
[ext_resource type="Script" uid="uid://dj4vhfg3gqjx4" path="res://assets/scripts/player/states/walking_state.gd" id="14_3y0ka"]
[ext_resource type="Script" uid="uid://dlhpsmdou5xvb" path="res://assets/scripts/player/states/sprinting_state.gd" id="15_m6lbn"]
[ext_resource type="Script" uid="uid://sdi1b0v7psfo" path="res://assets/scripts/player/states/standing_state.gd" id="16_rgtnl"]
[ext_resource type="Script" uid="uid://ddsx5bqkpl04o" path="res://assets/scripts/player/states/crouching_state.gd" id="17_ggkdx"]
[ext_resource type="Script" uid="uid://bbsv3y7j1ow3i" path="res://assets/scripts/player/states/airborne_state.gd" id="17_kqh78"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j0767"]
material = ExtResource("1_gf80s")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b1twt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ggkdx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wpncg"]

[node name="PlayerController" type="CharacterBody3D" node_paths=PackedStringArray("camera", "camera_effects", "state_chart", "standing_collision", "crouching_collision", "crouch_check", "interaction_raycast") groups=["player"]]
script = ExtResource("1_pvdlq")
camera = NodePath("CameraController")
camera_effects = NodePath("CameraController/Camera3D")
state_chart = NodePath("StateChart")
standing_collision = NodePath("StandingCollision")
crouching_collision = NodePath("CrouchingCollision")
crouch_check = NodePath("CrouchCheck")
interaction_raycast = NodePath("CameraController/Camera3D/InteractionRaycast")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_j0767")
skeleton = NodePath("../StandingCollision")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_b1twt")

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("SphereShape3D_ggkdx")
disabled = true

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_wpncg")
target_position = Vector3(0, 0.5, 0)

[node name="CameraController" type="Node3D" parent="." node_paths=PackedStringArray("player_controller", "component_mouse_capture")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("3_qmbew")
player_controller = NodePath("..")
component_mouse_capture = NodePath("../Components/MouseCapture")

[node name="Camera3D" type="Camera3D" parent="CameraController" node_paths=PackedStringArray("player")]
fov = 100.0
size = 0.25
script = ExtResource("4_0l0yx")
player = NodePath("../..")

[node name="InteractionRaycast" type="RayCast3D" parent="CameraController/Camera3D"]
target_position = Vector3(0, 0, -3)
script = ExtResource("4_cv1cy")

[node name="Components" type="Node" parent="."]

[node name="MouseCapture" type="Node" parent="Components"]
script = ExtResource("4_pvdlq")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_rkuj1")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_ers80")
metadata/_custom_type_script = "uid://c1vp0ojjvaby1"

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("7_nwn0c")
initial_state = NodePath("Grounded")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Grounded" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("7_nwn0c")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Idle" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("8_y4pjd")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Moving" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("7_nwn0c")
initial_state = NodePath("Walking")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Walking" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("8_y4pjd")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Sprinting" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("8_y4pjd")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Airborne" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("7_nwn0c")
initial_state = NodePath("Jumping")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Jumping" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("8_y4pjd")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnGrounded" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_mxnws")
to = NodePath("../Grounded")
event = &"onGrounded"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnAirborne" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_mxnws")
to = NodePath("../Airborne")
event = &"onAirborne"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnSprinting" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_mxnws")
to = NodePath("../Grounded/Moving/Sprinting")
event = &"onSprinting"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnWalking" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_mxnws")
to = NodePath("../Grounded/Moving/Walking")
event = &"onWalking"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnIdle" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_mxnws")
to = NodePath("../Grounded/Idle")
event = &"onIdle"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnMoving" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("9_mxnws")
to = NodePath("../Grounded/Moving")
event = &"onMoving"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Posture" type="Node" parent="StateChart/Root"]
script = ExtResource("7_nwn0c")
initial_state = NodePath("Standing")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Standing" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("8_y4pjd")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Crouching" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("8_y4pjd")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnStanding" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("9_mxnws")
to = NodePath("../Standing")
event = &"onStanding"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnCrouching" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("9_mxnws")
to = NodePath("../Crouching")
event = &"onCrouching"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="StateChartDebugger" parent="." instance=ExtResource("10_y4pjd")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 484.0
offset_bottom = 394.0
grow_horizontal = 1
grow_vertical = 1
initial_node_to_watch = NodePath("../StateChart")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("player_controller")]
unique_name_in_owner = true
script = ExtResource("10_ers80")
player_controller = NodePath("..")

[node name="MovementState" type="Node" parent="StateMachine"]

[node name="GroundedState" type="Node" parent="StateMachine/MovementState"]
script = ExtResource("12_wpncg")

[node name="IdleState" type="Node" parent="StateMachine/MovementState/GroundedState"]
script = ExtResource("11_nwn0c")

[node name="MovingState" type="Node" parent="StateMachine/MovementState/GroundedState"]
script = ExtResource("13_mxnws")

[node name="WalkingState" type="Node" parent="StateMachine/MovementState/GroundedState/MovingState"]
script = ExtResource("14_3y0ka")

[node name="SprintingState" type="Node" parent="StateMachine/MovementState/GroundedState/MovingState"]
script = ExtResource("15_m6lbn")

[node name="AirborneState" type="Node" parent="StateMachine/MovementState"]
script = ExtResource("17_kqh78")

[node name="Posture" type="Node" parent="StateMachine"]

[node name="StandingState" type="Node" parent="StateMachine/Posture"]
script = ExtResource("16_rgtnl")

[node name="CrouchingState" type="Node" parent="StateMachine/Posture"]
script = ExtResource("17_ggkdx")

[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded" to="StateMachine/MovementState/GroundedState" method="_on_grounded_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Movement/Grounded/Idle" to="StateMachine/MovementState/GroundedState/IdleState" method="_on_idle_state_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Moving" to="StateMachine/MovementState/GroundedState/MovingState" method="_on_moving_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Moving/Walking" to="StateMachine/MovementState/GroundedState/MovingState/WalkingState" method="_on_walking_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Movement/Grounded/Moving/Walking" to="StateMachine/MovementState/GroundedState/MovingState/WalkingState" method="_on_walking_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Moving/Sprinting" to="StateMachine/MovementState/GroundedState/MovingState/SprintingState" method="_on_sprinting_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Movement/Grounded/Moving/Sprinting" to="StateMachine/MovementState/GroundedState/MovingState/SprintingState" method="_on_sprinting_state_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborne" to="StateMachine/MovementState/AirborneState" method="_on_airborne_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Posture/Standing" to="StateMachine/Posture/StandingState" method="_on_standing_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Posture/Standing" to="StateMachine/Posture/StandingState" method="_on_standing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Posture/Crouching" to="StateMachine/Posture/CrouchingState" method="_on_crouching_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Posture/Crouching" to="StateMachine/Posture/CrouchingState" method="_on_crouching_state_physics_processing"]
